padariau antra pamoka

--- a/index.html
+++ b/index.html
@@ -3,19 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donny Montello</title>
+    <title>Bober Piosenka</title>
 </head>
+<style>
+    body {
+        background-color: #FCAE1E;
+    }
+
+    .grey {
+        color: grey
+    }
+
+</style>
 <body>
 
-    <h1>Donatas Montvydas</h1>
+    <h1 class="grey">Bebras</h1>
     <h4>arba</h4>
-    <h2>Donny Montello</h2>
-   <p>Atlikėjas, dainų kūrėjas ir muzikos prodiuseris Donatas Montvydas jau gruodžio 27 d. </p>
+    <h2>Bober Piosenka</h2>
+   <p>Lenkiskas atlikėjas, dainų kūrėjas ir muzikos prodiuseris Bober Piosenka.</p>
    <p>3 video linkus</p>
-<h3>sita video paprasta</h3>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/uI1Ywsz-fHQ?si=78dIk4J6No9ep3it" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <h3>sita video automatiskai pasijungs, taciau be muzikos</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/r1apECQzWbs?si=-xHYfK7gLpsyjqGH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<h3 class="grey">Orchestre version of a Bobr</h3>
+
+<iframe width="360" src="https://www.youtube.com/embed/ctNmd6gWyFw?si=TsfyBnME0Zi_oRb7" title="bober 1"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+   
+<h3>Bober clip</h3>
+    
+<iframe width="360" src="https://www.youtube.com/embed/iL1HvAu8V1w?si=Qob21p0_C7XwE8Jn" title="clip"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
+
+ <h3>Bober kine</h3>
+
+<iframe width="360" src="https://www.youtube.com/embed/gbRsJmMYbOM?si=0OK_GABRacLnwlw4" title="bober ir titanic"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"  allowfullscreen></iframe>
+
+<h3>dabar foto</h3>
+<p>jpg nuotrauka</p>
+<img width="360" src="photo/bobr image 1.jpg" alt="jpg nuotrauka">
+<p> png nuotrauka</p>
+<img width="360" src="photo/bobr image 2.png" alt="png nuotrauka">
+<p> gif</p>
+<img width="360" src="photo/bober 3.webp" alt="judantis bobras">
+
+<p>kur bobras gyvena?</p>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9729.884557154708!2d20.52929078208368!3d52.434379652619405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471ea8c73363be23%3A0x40107aa06ab0fb38!2s05-170%20Mochty-Smok%2C%20Lenkija!5e0!3m2!1slt!2slt!4v1730063118546!5m2!1slt!2slt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+<p>papildomai</p>
+
+<a class="grey" href="https://www.linkedin.com/in/hanna-rail%C4%97-49578b115/" target="_blank">tai mano linkedine</a>
+
 
 </body>
-</html>
+</html> 
